index and about routes working

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,16 +14,13 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://placehold.it/550x350', alt='')
+          img.thumbnail(src='/static/img/Efy-Hernandez.jpg', alt='')
         .dev-intro-box
 
-          //- Replace with your name
-          h5 Name
+          h5 Efy Neftali Hernandez
 
-          //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
+          p Genomic Scientist with a background in bioinformatics turned Full Stack Software Engineer, a creative at heart. 
 
-          //- Add path from your '/about' route handler to the href below
           a(href='') Learn More &rarr;
 
     .wrapper
@@ -31,8 +28,7 @@ html(lang="en" dir="ltr")
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
-          //- Replace with your name — this is for the mobile layout
-          span Name
+          span Efy Neftali Hernandez
 
       block content
 
