--- a/views/index.pug
+++ b/views/index.pug
@@ -4,11 +4,9 @@ block content
 
   article.portfolio-intro
 
-    //- Replace with your own heading like 'My Portfolio', or 'Hey, Potential Employers', or 'Let's make the web great together!' 
-    h1 Heading
-
-    //- Replace with a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
-    p Portfolio description
+    h1 Let's make a better web together!
+  
+    p Porfolio showcasing my skills as a full stack software engineer. These project showcase my full stack engineering learning journey.This learning journey has been made possible by implemting a "learn by doing approach."
 
 
   article.portfolio-project-thumbs
@@ -16,13 +14,17 @@ block content
 
       //- Use the Pug `each` iterator to loop over the projects in your data file  
       
+      each project in projects
+        //- img.project-img(src='${photo}', alt='project photo')
+      
         //- Use the example Pug code below and interpolated template literals as needed to dynamically generate:
           //- The paths in the link's href and img's src attributes
           //- The text 'Thumbnail' interpolated with the project title for the img's alt attribute
           //- The project title for the h5 element's text
 
         .cell
-          a(href='#')
-            img.thumbnail(src='https://placehold.it/550x550', alt='')
-            h5 My Site
+          a(href=`project/${project.id}`, target="_blank")
+            img.thumbnail(src=`${project.image_urls[0]}`, alt='project thumbnail')
+            h5 #{project.project_name}
+
 
