--- a/views/project.pug
+++ b/views/project.pug
@@ -17,8 +17,7 @@ block content
         h1 #{projects.project_name}
 
         //- Use interpolation to dynamically add the project description
-        p.lead.text-light
-          #{projects.description}
+        p.lead.text-light #{projects.description}
 
       .project-tech-links-box.box
         h6 Technologies
@@ -27,14 +26,14 @@ block content
             li #{tech}
 
         //- Add the href values to the links below
-        a.btn-link(href='${projects.live_link}' target="blank") Live Demo
-        a.btn-link(href='${projects.live_link}' target="blank") GitHub Repo
+        a.btn-link(href=`${projects.live_link}` target="blank") Live Demo
+        a.btn-link(href=`${projects.github_link}` target="blank") GitHub Repo
 
     .project-img-box.box
 
       //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
       each photo in projects.image_urls
-        img.project-img(src='${photo}', alt='project photo')
+        img.project-img(src=`${photo}`, alt='project photo')
       //- img.project-img(src='https://placehold.it/1200x550', alt='')
       //- img.project-img(src='https://placehold.it/1200x550', alt='')
 
