added error msg

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html(lang="en" dir="ltr")
 
           p Genomic Scientist with a background in bioinformatics turned Full Stack Software Engineer, a creative at heart. 
 
-          a(href='') Learn More &rarr;
+          a(href='/about') Learn More &rarr;
 
     .wrapper
       .header
