cleaned up err handlers

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,6 @@
 block content
     .error
-        h1 Oops, something is not right here!
+        h1 Oops, Page Not Found!
         h2= error.status
         br
         pre= error.stack
